Remove upsert from product
To have a particular URL for every resources
